package dat.dtos;

public class BookDTO {
}
