package dat.dtos;

public class LibraryDTO {
}
