package dat.dtos;

public class UserDTO {
}
