package dat.entities;

public class Employee {
}
